--- a/README
+++ b/README
@@ -16,3 +16,6 @@ https://nl.wikipedia.org/wiki/Asielzoeker
 
 # mercedes benz sl class
 https://en.wikipedia.org/wiki/Mercedes-Benz_SL-Class
+
+# jan van eyck academie
+https://en.wikipedia.org/wiki/Jan_van_Eyck_Academie
